# arrow2

./: .github_changelog_generator  .gitignore  .gitmodules  404.html  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  arrow.html  build.rs  codecov.yaml  compute.html  extension.html  ffi.html  high_level.html  index.html  license.py  low_level.html  metadata.html  print.html  rust-toolchain.toml  search-index.js  searchindex.js  searchindex.json  source-files.js
.cargo/: audit.toml
.github/workflows/: coverage.yml  docs.yml  integration-ffi.yml  integration-ipc.yml  integration-parquet.yml  integration.yml  rust.yml  security.yml  test.yml
array/: struct.BooleanArray.html  trait.Array.html
array/dictionary/: trait.DictionaryKey.html
array/fixed_size_binary/: struct.FixedSizeBinaryArray.html
array/growable/: struct.GrowableBinary.html  trait.Growable.html
array/ord/: fn.total_cmp.html
arrow-flight/: Cargo.toml
arrow-flight/src/: arrow.flight.protocol.rs  utils.rs
arrow-odbc-integration-testing/: Cargo.toml  docker-compose.yml  dockerfile
arrow-odbc-integration-testing/src/: lib.rs  read.rs  write.rs
arrow-parquet-integration-testing/: Cargo.toml  main.py  main_spark.py
arrow-parquet-integration-testing/src/: main.rs
arrow-pyarrow-integration-testing/: Cargo.toml  README.md
arrow-pyarrow-integration-testing/src/: c_stream.rs  lib.rs
arrow-pyarrow-integration-testing/tests/: test_c_stream.py  test_sql.py
arrow2/array/: struct.BinaryArray.html  struct.DictionaryArray.html  struct.FixedSizeListArray.html  struct.FixedSizeListPrimitive.html  struct.Utf8Array.html  trait.Builder.html  trait.DictionaryKey.html  trait.FromFfi.html  trait.GenericBinaryArray.html  trait.IntoArray.html  trait.IterableListArray.html  trait.Offset.html  trait.TryFromIterator.html  type.Int128Array.html  type.Int32Array.html  type.Int8Array.html  type.UInt64Array.html
arrow2/bitmap/: fn.binary.html  fn.ternary.html
arrow2/bits/: fn.get_bit_unchecked.html  struct.BitChunks.html  struct.SlicesIterator.html
arrow2/buffer/: index.html  struct.MutableBuffer.html
arrow2/compute/: index.html
arrow2/ffi/: fn.create_empty.html  trait.ArrowArrayRef.html
arrow2/record_batch/: trait.RecordBatchReader.html
arrow2/temporal_conversions/: constant.EPOCH_DAYS_FROM_CE.html  constant.MILLISECONDS_IN_DAY.html  fn.date32_to_date.html  fn.time32s_to_time.html  fn.time64ns_to_time.html  fn.time64us_to_time.html  fn.timestamp_ns_to_datetime.html  sidebar-items.js
arrow2/types/: index.html
arrow2/util/: fn.lexical_to_string.html
benches/: aggregate.rs  arithmetic_kernels.rs  assign_ops.rs  avro_read.rs  bitmap.rs  bitmap_assign_ops.rs  bitmap_ops.rs  bitwise.rs  cast_kernels.rs  comparison_kernels.rs  concat.rs  concatenate.rs  count_zeros.rs  dummy.rs  filter_kernels.rs  from_trusted_len_iter.rs  growable.rs  hash_kernel.rs  iter_list.rs  iter_utf8.rs  length_kernel.rs  like_kernels.rs  mutable.rs  null_count.rs  read_json.rs  read_parquet.rs  read_parquet_arrow.rs  slices_iterator.rs  sort_kernel.rs  take_kernels.rs  unset_count.rs  write_csv.rs  write_ipc.rs  write_json.rs  write_parquet.rs
benchmarks/: bench_read.py  run.py  summarize.py
bitmap/: fn.unary.html  struct.BitmapIter.html
bitmap/bitmap_ops/: fn.quaternary.html  fn.unary.html
compute/aggregate/: fn.max_string.html
compute/arithmetics/: fn.negate.html  trait.ArrayCheckedAdd.html  trait.ArrayOverflowingAdd.html  trait.ArraySaturatingAdd.html
compute/cast/: fn.cast.html  index.html
compute/comparison/: index.html
compute/filter/: index.html
compute/hash/: fn.hash_binary.html  fn.hash_utf8.html  index.html
compute/like/: fn.like_utf8_scalar.html
compute/limit/: index.html
compute/regex_match/: index.html
compute/take/: fn.can_take.html
compute/temporal/: sidebar-items.js
datatypes/: enum.IntervalUnit.html  struct.Schema.html
docs/: ayu.css  crates.js  dark.css  light.css  main.js  rustdoc.css  search-index.js  settings.html  source-files.js
docs/arrow2/: all.html  enum.Either.html  fn.total_allocated_bytes.html  index.html  sidebar-items.js  struct.AHashMap.html
docs/docs/: search-index.js  settings.html
docs/guide/: extension.html
error/: index.html
examples/: arithmetics.rs  avro_kafka.rs  avro_read.rs  avro_read_async.rs  avro_write.rs  cow.rs  csv_read.rs  csv_read_async.rs  csv_read_parallel.rs  csv_write.rs  csv_write_parallel.rs  extension.rs  ffi.rs  growable.rs  io_odbc.rs  ipc_file_mmap.rs  ipc_file_read.rs  ipc_file_write.rs  json_read.rs  json_write.rs  metadata.rs  ndjson_read.rs  ndjson_write.rs  orc_read.rs  parquet_read.rs  parquet_read_async.rs  parquet_read_parallel.rs  parquet_read_record.rs  parquet_write.rs  parquet_write_async.rs  parquet_write_record.rs
examples/ipc_pyarrow/: Cargo.toml  main.py
examples/parquet_read_parallel/: Cargo.toml
examples/parquet_write_parallel/: Cargo.toml
examples/s3/: Cargo.toml
ffi/: fn.export_to_c.html  struct.ArrowArray.html
ffi/ffi/: trait.ArrowArrayRef.html
guide/: book.toml
guide/src/: README.md  SUMMARY.md  arrow.md  compute.md  csv_reader.md  extension.md  ffi.md  high_end.md  high_level.md  low_end.md  low_level.md  (+1 more)
integration-testing/: Cargo.toml  README.md  unskip.patch
io/: avro_read.html  avro_write.html  csv_reader.html  csv_write.html  index.html  ipc_file_read.html  ipc_mmap.html  ipc_read.html  ipc_stream_read.html  ipc_write.html  json_read.html  json_write.html  odbc.html  parquet_read.html  parquet_write.html  sidebar-items.js
parquet_integration/: bench_compute.py  bench_pyarrow.py  bench_read.py  bench_write.py  write_parquet.py
src/: alignment.rs  alloc.rs  chunk.rs  columns.rs  docs.rs  error.rs  lib.rs  offset.rs  record_batch.rs  temporal.rs  temporal_conversions.rs  to_mutable.rs  trusted_len.rs  types.rs  vec.rs
temporal_conversions/: constant.MILLISECONDS.html  fn.date64_to_date.html  fn.timestamp_ms_to_datetime.html  fn.timestamp_s_to_datetime.html  fn.timestamp_us_to_datetime.html
testing/: data_0_0_0.snappy.parquet
types/: trait.BitChunk.html
util/: sidebar-items.js
(+10417 files in other folders)
