[package]
name = "arrow-parquet-integration-testing"
version = "0.1.0"
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com>"]
edition = "2018"

[dependencies]
clap = "^2.33"
arrow2 = { path = "../", default-features = false, features = ["io_parquet", "io_json_integration"] }
flate2 = "^1"
serde = { version = "^1.0", features = ["rc"] }
serde_derive = { version = "^1.0" }
serde_json = { version = "^1.0", features = ["preserve_order"] }
